--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "http://localhost:3000/?title=Testing+Environment&instructions=Please+review+the+document&path=/test"
 }
