--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,8 +32,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/survey-ui-prototype-wrapper:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/survey-ui-prototype-wrapper:latest
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
 
       - name: Image digest
         run: echo ${{ steps.build_and_push.outputs.digest }}
